gcc/testsuite/rust/rustc/ui/type/type-params-in-different-spaces-3.rs
trait Tr : Sized {
    fn test<X>(u: X) -> Self {
        u   // { dg-error ".E0308." "" { target *-*-* } }
    }
}

fn main() {}

